Compiler Bouw/compiler/test/basic/stephen/fail/local_export.cvc
export int main() {
    int a = 5;
    export int b = 0;
    return 0;
}
